build for compatibility with Java 11