@@ -15,8 +15,8 @@ val javaVersion = JavaVersion.current()
 val websiteUrl = "https://github.com/stephengold/kk-physics"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_19
-    targetCompatibility = JavaVersion.VERSION_19
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 dependencies {
@@ -32,17 +32,15 @@ configurations.all {
 }
 
 tasks.withType<JavaCompile>().all { // Java compile-time options:
-    options.compilerArgs.add("--enable-preview")
     options.compilerArgs.add("-Xdiags:verbose")
     options.compilerArgs.add("-Xlint:unchecked")
     options.encoding = "UTF-8"
-    options.release = 19
+    options.release = 11
     //options.setDeprecation(true) // to provide detailed deprecation warnings
 }
 
 tasks.withType<Javadoc>().all { // Javadoc runtime options:
     (options as CoreJavadocOptions).apply {
-        addStringOption("-release", "19")
     }
 }
 
